--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -17,4 +17,7 @@ jobs:
       run: sbt test
     - name: Cache
       uses: actions/cache@v1.0.0
+      with:
+        path: ~/.cache/coursier/v1
+         
 
