--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -9,15 +9,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Cache
+      uses: actions/cache@v1.0.0
+      with:
+        path: ~/.cache/coursier/v1
+        key: ${{ runner.os }}-coursier_v1
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
     - name: Run tests
       run: sbt test
-    - name: Cache
-      uses: actions/cache@v1.0.0
-      with:
-        path: ~/.cache/coursier/v1
-         
+
 
